src-errormsg/E14-FunctionNameTypo/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E14-FunctionNameTypo/Plutarch.hs:35:18: error: [GHC-88464]
    Variable not in scope:
      pfromDat :: Term s (PAsData PInteger) -> Term s PInteger
    Suggested fix:
      Perhaps use ‘pfromData’ (imported from Plutarch.Prelude)
   |
35 |     PAmount n -> pfromDat n
   |                  ^^^^^^^^
